feat: add BulkDeleteMessages route
